# libpredict

./: .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  CREDITS  Doxyfile.in  README.md  has_linker_exported_symbols_list.symbols  has_linker_version_script.symver  index.html  params.json  testcase.example
api/0.1/: annotated.html  classes.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  graph_legend.html  index.html  predict_8h.html  predict_8h__incl.md5  predict_8h_source.html  structobservation.html  structobserver.html  structorbit.html  structorbit__coll__graph.map  structorbit__coll__graph.md5  structpredict__observation.html  structpredict__observer__t.html  structpredict__orbit__t.html  structpredict__orbit__t__coll__graph.map  structpredict__orbit__t__coll__graph.md5  structpredict__tle__t.html  structtle__t.html
api/0.1/search/: all_61.js  all_64.js  all_65.js  all_69.js  all_6c.js  all_6e.js  all_6f.js  all_70.js  all_72.js  all_74.js  all_76.js  all_78.js  all_79.js  classes_6f.js  classes_70.js  classes_74.js  enums_65.js  enumvalues_65.js  functions_6f.js  functions_70.js  search.js  typedefs_6f.js  typedefs_70.js  variables_61.js  variables_62.js  variables_63.js  variables_64.js  variables_65.js  variables_6d.js  variables_6f.js  variables_70.js  variables_72.js  variables_73.js  variables_74.js  variables_76.js  variables_78.js  variables_7a.js
api/1.0/: annotated.html  classes.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  graph_legend.html  index.html  predict_8h.html  predict_8h_source.html  structpredict__observation.html  structpredict__observer__t.html  structpredict__orbit__t.html  structpredict__tle__t.html
api/1.0/search/: all_63.js  all_6e.js  all_70.js  defines_70.js  functions_70.js  variables_65.js  variables_6c.js  variables_6f.js  variables_78.js
api/2.0/: annotated.html  classes.html  dir_2075c773a2e6e612dc8389c2f7149fe3.html  dir_2075c773a2e6e612dc8389c2f7149fe3_dep.map  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  graph_legend.html  index.html  predict_8h.html  predict_8h__incl.md5  predict_8h_source.html  structpredict__observation.html  structpredict__observer__t.html  structpredict__orbital__elements__t.html  structpredict__position.html
api/2.0/search/: all_2.js  all_5.js  all_6.js  all_9.js  all_a.js  all_d.js  enums_0.js  files_0.js  (+6 more)
api/master/: annotated.html  classes.html  dir_2075c773a2e6e612dc8389c2f7149fe3.html  dir_2075c773a2e6e612dc8389c2f7149fe3_dep.md5  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23_dep.map  dir_d44c64559bbebec7f509842c48db8b23_dep.md5  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  graph_legend.html  index.html  predict_8h.html  predict_8h__incl.map  predict_8h_source.html  structpredict__observation.html  structpredict__observer__t.html  structpredict__orbital__elements__t.html  structpredict__position.html
debian/: README.Debian  README.source  changelog  control  copyright  libpredict2.cron.d.ex  libpredict2.default.ex  libpredict2.doc-base.EX  libpredict3-dev.install  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  shlibs.local  shlibs.local.ex  watch  watch.ex
debian/conf/: distributions
debian/db/: checksums.db  contents.cache.db  packages.db  references.db  release.caches.db
examples/: CMakeLists.txt  pass_data.py
examples/basic/: CMakeLists.txt  Makefile  README  main.c
examples/orbit-2d/: CMakeLists.txt  README.md  generate_orbit_data.cpp  plot_orbits.py
examples/passplot/: CMakeLists.txt  README.md  generate_pass_data.c  plot_pass.py
examples/setrise/: .gitignore  CMakeLists.txt  main.c
examples/test/: CMakeLists.txt  Main.cpp  Makefile  README  TestCase.cpp  TestCase.h  TestMoon.cpp  TestSun.cpp  main.c  testcase
include/: CMakeLists.txt
include/predict/: CMakeLists.txt  juliandate.h  observer.h  orbit.h  predict.h  predict.h.in  tle.h
src/: .gitignore  CMakeLists.txt  aoslos.c  aoslos.h  body.c  body.h  coordinates.c  coordinates.h  defs.h  julian_date.c  libpredict.symbols  libpredict.symver  moon.c  observatory.h  observer.c  orbit.c  orbit.h  pass_utils.c  pass_utils.h  predict.h  predict.pc  predict.pc.in  pypredict.i  refraction.c  sdp4.c  sdp4.h  sgp4.c  sgp4.h  sun.c  time.c  time.h  unsorted.c  unsorted.h  vec3.c  vec3.h  version.c
tests/: CMakeLists.txt  aoslos-known-timepoints-t.cpp  aoslos-t.cpp  dummy-t.c  generate_predict_testcases.sh  geostationary-t.cpp  jupiter-t.cpp  link-t.c  maxelevation-t.cpp  moon-t.cpp  orbit-t.cpp  sun-t.cpp  testcase.cpp  testcase_reader.cpp  testcase_reader.h  venus-t.cpp
tests/data/: geostationary.tle  jupiter_2017_2025.test  large-tle-collection.tle  moon_201509201000.test  moon_201509201600.test  sat_ERS-1_201509261800.test  sat_GPS_BIIA-10_201509261800.test  sat_HINODE_201509261800.test  sat_ISS_201509261800.test  sat_MOLNIYA_1-29_201509261800.test  sat_OSCAR-7_201509201915.test  sat_OSCAR-7_201509201931.test  sat_SIRIUS-1_201509261800.test  sat_THOR_III_201509261800.test  sat_VELA-1_201509261800.test  sun_201509201933.test  sun_201509210600.test  venus_2017_2025.test
tests/data-generator/: generate_predict_testcases.sh  predict_client.c  prepare_geosynchronous_testcase_data.sh  testcase.db  testcase.qth  testcase.tle
tests/data-generator/aoslos/: CMakeLists.txt  aoslos-data-generator.cpp
tests/test_data/: generate_predict_testcases.sh
tests/test_data_generation/: generate_predict_testcases.sh
tests/test_utils/: orbits_from_file.cpp  orbits_from_file.h
travis/: CMakeLists.txt  publish-doxygen.in  travisci_rsa.enc
(+15 files in other folders)
